# movie_collection_rust

./: .gitignore  Cargo.toml  Dockerfile.ubuntu16.04  Dockerfile.ubuntu18.04  Makefile  README.md
.github/workflows/: rust.yml
migrations/: V01__imdb_ratings.sql  V02__imdb_episodes.sql  V03__movie_collection.sql  V04__movie_queue.sql  V05__trakt_watched_episodes.sql  V06__trakt_watched_movies.sql  V07__trakt_watchlist.sql  V08__authorized_users.sql  V09__movie_collection_on_dvd.sql  V10__movie_collection_add_sequence.sql  V11__fix_nulls.sql  V12__plex_event.sql  V13__plex_event_player_address.sql  V14__plex_event_last_modified.sql  V15__plex_event_metadata_type.sql  V16__plex_event_sections.sql  V17__plex_event_metadata_key.sql  V18__plex_filename.sql  V19__movie_queue_collection_idx_unique.sql  V20__movie_queue_collection_idx_unique.sql  V21__plex_event_cleanup.sql  V22__trakt_watchlist_show.sql  V23__trakt_watched_episodes_unique.sql  V24__trackt_watchlist_show_not_null.sql  V25__movie_queue_collection_idx_pkey.sql  V26__plex_filename_collection_id.sql  V27__plex_metadata.sql  V28__music_collection.sql  V29__integer_to_uuid.sql  V30__imdb_episodes_nullable.sql  V31__add_indexes.sql  V32__movie_collection_episode_id.sql  V33__add_default_timestamps.sql  V34__authorized_users_created_deleted.sql  V35__trakt_last_watched_at.sql
movie_collection_http/: Cargo.toml
movie_collection_http/src/: app.rs  errors.rs  graphql.rs  lib.rs  logged_user.rs  movie_queue_app.rs  movie_queue_elements.rs  movie_queue_http.rs  movie_queue_requests.rs  movie_queue_routes.rs  requests.rs  routes.rs  trakt_routes.rs  tvshows_route.rs
movie_collection_lib/: Cargo.toml
movie_collection_lib/src/: config.rs  date_time_wrapper.rs  imdb_episodes.rs  imdb_ratings.rs  imdb_utils.rs  iso_8601_datetime.rs  lib.rs  make_list.rs  make_queue.rs  mkv_utils.rs  movie_collection.rs  movie_queue.rs  music_collection.rs  parse_imdb.rs  pgpool.rs  plex_events.rs  process_show_item.rs  stack_string.rs  stdout_channel.rs  timezone.rs  trakt_connection.rs  trakt_instance.rs  trakt_utils.rs  transcode_service.rs  tv_show_source.rs  utils.rs
movie_collection_lib/src/common/: config.rs  imdb_episodes.rs  imdb_ratings.rs  imdb_utils.rs  make_list.rs  make_queue.rs  mod.rs  movie_collection.rs  movie_queue.rs  parse_imdb.rs  pgpool.rs  trakt_instance.rs  trakt_utils.rs  tv_show_source.rs  utils.rs
movie_sync_http/: Cargo.toml
movie_sync_http/src/: app.rs  lib.rs  requests.rs  routes.rs
movie_trakt_http/: Cargo.toml
movie_trakt_http/src/: app.rs  errors.rs  lib.rs  requests.rs  routes.rs
movie_transcode_http/: Cargo.toml
movie_transcode_http/src/: app.rs  movie_transcode_http.rs  requests.rs  routes.rs
python/: trakt_instance.py
scripts/: Dockerfile  backup_db.sh  bootstrap_db.sh  build_deb_docker.sh  clear_db.sh  imdb_episodes.sql  imdb_ratings.sql  movie_collection.sql  movie_queue.sql  openapi.yaml  restore_db.sh  sync_db.py  trakt_watched_episodes.sql  trakt_watched_movies.sql
src/: config.rs  find_new_episodes.rs  imdb_episodes.rs  imdb_ratings.rs  lib.rs  make_collection.rs  make_list.rs  make_queue.rs  movie_collection.rs  movie_queue_cli.rs  movie_queue_http.rs  movie_sync_http.rs  movie_trakt_http.rs  parse_imdb.rs  remcom.rs  run_copy_queue.rs  run_encoding.rs  trakt_app.rs  trakt_http.rs  trakt_utils.rs  transcode_avi.rs  utils.rs
src/common/: config.rs  imdb_episodes.rs  imdb_ratings.rs  imdb_utils.rs  make_list.rs  make_queue.rs  mod.rs  movie_collection.rs  movie_queue.rs  parse_imdb.rs  pgpool.rs  trakt_utils.rs  tv_show_source.rs  utils.rs
src/http/: mod.rs  movie_queue_app.rs  movie_queue_requests.rs  movie_queue_routes.rs  trakt_routes.rs  tvshows_route.rs
templates/: index.html  move_script.sh  queue_list.html  scripts.js  style.css  transcode_script.sh  tvshows_template.html  video_template.html  watched_template.html  watchlist_template.html
tests/data/: american_horror.html  archer_s13_children.xml  fargo_2014_s04_ep02.json  fargo_2014_s04_ep02_mp4.err  fargo_2014_s04_ep02_mp4.out  imdb_rating_body.html  imdb_season_episode_body.html  mkvinfo_output.txt  plex_archer.xml  plex_archer_s13.xml  plex_archer_s13_ep05.xml  plex_metadata.xml  test.env  the_walking_dead_s10_ep02_mp4.err  the_walking_dead_s10_ep02_mp4.out  the_walking_dead_s10_ep05.json  what_we_do_in_the_shadows_2019_s06_ep10.ass  what_we_do_in_the_shadows_2019_s06_ep10.srt
trakt_http/: Cargo.toml
trakt_http/src/: app.rs  errors.rs  lib.rs  logged_user.rs  requests.rs  routes.rs
transcode_lib/: Cargo.toml
transcode_lib/src/: lib.rs  transcode_channel.rs
