[package]
name = "movie_collection_rust"
version = "0.10.50"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[package.metadata.deb]
name = "movie-collection-rust"
priority = "optional"
section = "rust"
provides = "movie-collection-rust"
extended-description = """\
Utilities for maintaining a collection of videos."""

[dependencies]
anyhow = "1.0"
clap = {version="4.0", features=["derive"]}
derive_more = {version="1.0", features=["full"]}
env_logger = "0.11"
futures = "0.3"
log = "0.4"
movie_collection_lib = {path = "movie_collection_lib"}
movie_collection_http = {path = "movie_collection_http"}
refinery = {version="0.8", features=["tokio-postgres"]}
serde_json = "1.0"
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="0.9.3" }
stdout-channel = "0.6"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.40", features=["rt", "macros", "rt-multi-thread"]}
transcode_lib = {path = "transcode_lib"}

[workspace]
members = [
    "movie_collection_lib", "movie_collection_http", "transcode_lib",
]

[[bin]]
name = "make-list"
path = "src/make_list.rs"
doc = false

[[bin]]
name = "remcom"
path = "src/remcom.rs"
doc = false

[[bin]]
name = "transcode-avi"
path = "src/transcode_avi.rs"
doc = false

[[bin]]
name = "run-encoding"
path = "src/run_encoding.rs"
doc = false

[[bin]]
name = "parse-imdb"
path = "src/parse_imdb.rs"
doc = false

[[bin]]
name = "make-collection"
path = "src/make_collection.rs"
doc = false

[[bin]]
name = "make-queue"
path = "src/make_queue.rs"
doc = false

[[bin]]
name = "movie-queue-http"
path = "src/movie_queue_http.rs"
doc = false

[[bin]]
name = "find-new-episodes"
path = "src/find_new_episodes.rs"
doc = false

[[bin]]
name = "trakt-app"
path = "src/trakt_app.rs"
doc = false

[[bin]]
name = "movie-queue-cli"
path = "src/movie_queue_cli.rs"
doc = false
