[package]
name = "movie_collection_http"
version = "0.11.5"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-graphql = {version="7.0", features=["dataloader", "time"]}
async-graphql-warp = "7.0"
async-trait = "0.1"
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.12.2"}
bytes = "1.0"
derive_more = {version="1.0", features=["full"]}
dioxus = "0.6"
dioxus-core = "0.6"
dioxus-ssr = "0.6"
futures = "0.3"
itertools = "0.14"
log = "0.4"
maplit = "1.0"
movie_collection_lib = {path = "../movie_collection_lib"}
parking_lot = "0.12"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
postgres-types = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = {version="0.12", features=["cookies", "json", "rustls-tls"], default-features=false}
rust_decimal = {version="1.27", features=["db-tokio-postgres"]}
rust_decimal_macros = "1.27"
rweb = {git = "https://github.com/ddboline/rweb.git", features=["openapi"], default-features=false, tag="0.15.2"}
rweb-helper = { git = "https://github.com/ddboline/rweb_helper.git", tag="0.5.3" }
serde_yaml = "0.9"
smallvec = {version="1.6", features=["serde", "write"]}
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types", "rweb-openapi", "async_graphql"], tag="1.0.2" }
stdout-channel = "0.6"
thiserror = "2.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
time-tz = {version="2.0", features=["system"]}
tokio = {version="1.42", features=["rt", "macros", "rt-multi-thread"]}
tokio-stream = "0.1"
uuid = "1.0"
url = "2.3"
