[package]
name = "movie_collection_lib"
version = "0.9.2"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[dependencies]
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
tokio-postgres = {version="0.7", features=["with-time-0_3", "with-serde_json-1"]}
postgres-types = "0.2"
deadpool = "0.9"
deadpool-postgres = "0.10"
rayon = "1.5"
dotenv = "0.15"
select = "0.5"
reqwest = {version="0.11", features=["cookies", "json", "rustls-tls"], default_features=false}
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
time-tz = {version="1.0", features=["system"]}
rand = "0.8"
futures = "0.3"
log = "0.4"
bytes = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dirs = "4.0"
tokio = {version="1.17", features=["full"]}
tokio-stream = {version="0.1", features=["fs"]}
async-trait = "0.1"
derive_more = "0.99"
structopt = "0.3"
lazy_static = "1.4"
base64 = "0.13"
maplit = "1.0"
envy = "0.4"
jwalk = "0.6"
itertools = "0.10"
handlebars = "4.0"
smallvec = {version="1.6", features=["serde", "write"]}
procfs = "0.12"
uuid = "0.8"
roxmltree = "0.14"
stack-string = { version="0.7", features=["postgres_types"] }
stdout-channel = "0.5"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.4", features=["deadpool"]}
