[package]
name = "movie_collection_lib"
version = "0.10.47"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bytes = "1.0"
clap = {version="4.0", features=["derive"]}
derive_more = "0.99"
dirs = "5.0"
dotenv = "0.15"
deadpool = "0.12"
deadpool-postgres = "0.14"
envy = "0.4"
futures = "0.3"
itertools = "0.13"
jwalk = "0.8"
log = "0.4"
maplit = "1.0"
once_cell = "1.0"
postgres_query = {git = "https://github.com/ddboline/rust-postgres-query", tag = "0.3.8", features=["deadpool"]}
postgres-types = "0.2"
procfs = "0.16"
rand = "0.8"
rayon = "1.5"
reqwest = {version="0.12", features=["cookies", "json", "rustls-tls"], default-features=false}
roxmltree = "0.20"
rust_decimal = {version="1.27", features=["db-tokio-postgres"]}
select = "0.6"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
smallvec = {version="1.6", features=["serde", "write"]}
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", features=["postgres_types"], tag="0.9.3" }
stdout-channel = "0.6"
thiserror = "1.0"
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
time-tz = {version="2.0", features=["system"]}
tokio-postgres = {version="0.7", features=["with-uuid-1", "with-time-0_3", "with-serde_json-1"]}
tokio = {version="1.38", features=["rt", "macros", "rt-multi-thread", "process"]}
tokio-stream = {version="0.1", features=["fs"]}
uuid = "1.0"
