[package]
name = "movie_sync_http"
version = "0.1.0"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
movie_collection_lib = {path = "../movie_collection_lib"}
actix-web = "3.1"
actix-rt = "1.1"
actix-identity = "0.3"
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
tokio = {version="0.2", features=["time"]}
parking_lot = "0.11"
lazy_static = "1.4"
anyhow = "1.0"
thiserror = "1.0"
actix-threadpool = "0.3"
async-trait = "0.1"
log = "0.4"
maplit = "1.0"
handlebars = "3.5"
itertools = "0.9"
auth_server_rust = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.1.23"}
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", tag="0.1.7", features=["postgres_types"] }

[[bin]]
name = "movie-sync-http"
path = "src/movie_sync_http.rs"
doc = false
