[package]
name = "trakt_http"
version = "0.6.26"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
movie_collection_lib = {path = "../movie_collection_lib"}
actix-web = "3.2"
actix-rt = "1.1"
actix-identity = "0.3"
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4"
tokio = {version="0.2", features=["full"]}
parking_lot = "0.11"
lazy_static = "1.4"
anyhow = "1.0"
thiserror = "1.0"
actix-threadpool = "0.3"
async-trait = "0.1"
log = "0.4"
maplit = "1.0"
handlebars = "3.5"
itertools = "0.9"
env_logger = "0.8"
reqwest = {version="0.10", features=["cookies", "json", "rustls-tls"]}
authorized_users = { git = "https://github.com/ddboline/auth_server_rust.git", tag="0.2.5"}
stack-string = { git = "https://github.com/ddboline/stack-string-rs.git", tag="0.1.9", features=["postgres_types"] }
stdout-channel = { git = "https://github.com/ddboline/stdout-channel-rs.git", branch="tokio_02" }

[[bin]]
name = "trakt-http"
path = "src/trakt_http.rs"
doc = false
