[package]
name = "transcode_lib"
version = "0.9.19"
authors = ["Daniel Boline <ddboline@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
deadpool = "0.9"
deadpool-lapin = {version="0.10", features=["serde"]}
lapin = {version="2.0", default_features=false, features=["rustls"]}
derive_more = "0.99"
futures = "0.3"
log = "0.4"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"

[dev-dependencies]
tokio = {version="1.21", features=["full"]}
stdout-channel = "0.5"
movie_collection_lib = {path = "../movie_collection_lib"}
